CSS fix so social links don't overhang on smaller devices

--- a/css/personalized.css
+++ b/css/personalized.css
@@ -138,7 +138,7 @@ blockquote p {
 	}
 
 	#header-background {
-		height: 150px;
+		height: 153px;
 	}
 
 	#footer p {
@@ -155,7 +155,7 @@ blockquote p {
 	}
 
 	#header-background {
-		height: 150px;
+		height: 153px;
 	}
 }
 
